updated media query

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
 }
 .bg2 {
   background-repeat: no-repeat;
@@ -134,12 +135,14 @@ body {
   left: 0;
   right: 0;
   background-color: whitesmoke;
+  /* transforms the card to go down */
   transform: translateY(100%);
   transition: 0.2s ease-in-out;
   opacity: 85%;
 }
 
 .card1:hover .cardOverlay1 {
+  /* transforms the card to come up  */
   transform: translateY(0);
 }
 
@@ -148,12 +151,9 @@ body {
   display: flex;
   align-items: center;
   background-color: whitesmoke;
+  /* keeps title on card */
   transform: translateY(-100%);
   transition: 0.2s ease-in-out;
-}
-
-.card1:hover .cardHeader1 {
-  transform: translateY(0);
 }
 
 .cardHeaderText1 {
@@ -342,13 +342,13 @@ body {
   }
   p {
     font-size: 50px;
-    display: flex;
+  }
+  .button {
     flex-wrap: wrap;
-    width: fit-content;
-    text-align: center;
+    display: block;
   }
   .button1 {
-    font-size: 10px;
+    font-size: 15px;
   }
   .title {
     font-size: 16px;
@@ -389,7 +389,7 @@ body {
   /* CONTACT ME CONTACT ME CONTACT ME CONTACT ME CONTACT ME CONTACT ME CONTACT ME */
 
   .contact {
-    display: flexbox;
+    /* display: flexbox; */
     margin-left: 15%;
     align-items: center;
   }
